--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <i class="fa-regular fa-circle-down"></i>
                     </div>
                     <div class="thumb">
-                        <img v-for="(image, index) in slides" :src="slides[index].image" :alt="slides[index].title" :class="index === activeIndex ? 'active' : 'inactive'">
+                        <img v-for="(image, index) in slides" :src="slides[index].image" :alt="slides[index].title" :class="index === activeIndex ? 'active' : 'inactive'" @click="clickThumb">
                     </div>
                 </div>
 
