--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
     <div id="app">
 
-        <div class="container">
-            <div class="slider-wrapper" tabindex="0">
+        <div class="container"  >
+            <div class="slider-wrapper" tabindex="0" @mouseover="stopAutoLoop" @mouseleave="autoLoop">
 
-                <div @mouseover="stopAutoLoop" @mouseleave="autoLoop" class="item">
+                <div class="item">
                     <img :src="slides[activeIndex].image" alt="slides[activeIndex].title" />
                     <div class="info">
                         <h2 class="title">{{ slides[activeIndex].title }}</h2>
